# simple-compiler

./: .clang-format  CMakeLists.txt  README.md  build.sh  input.test  main.cpp
ast/: ASTNode.h  Compiler.h  CompilerContext.h  Const.h  Type.h
ast/expr/: BinaryExpr.h  CallExpr.h  Expr.h  NumberExpr.h  VariableExpr.h
ast/program/: Program.h
ast/stmt/: ExprStmt.h  FuncDefStmt.h  IfStmt.h  ListStmt.h  ReturnStmt.h  Stmt.h  VarDefStmt.h  WhileStmt.h
include/ast/: ASTNode.h  Compiler.h  CompilerContext.h  Type.h
include/ast/expr/: BinaryExpr.h  CallExpr.h  NumberExpr.h  VariableExpr.h
include/ast/program/: Program.h
include/ast/stmt/: ExprStmt.h  FuncDefStmt.h  IfStmt.h  ListStmt.h  ReturnStmt.h  VarDefStmt.h  WhileStmt.h
parser/: README.md  input.sc  sc.l  sc.ypp
src/ast/: CompilerContext.cpp
src/ast/expr/: BinaryExpr.cpp  CallExpr.cpp  NumberExpr.cpp  VariableExpr.cpp
src/ast/program/: Program.cpp
src/ast/stmt/: ExprStmt.cpp  FuncDefStmt.cpp  IfStmt.cpp  ListStmt.cpp  ReturnStmt.cpp  VarDefStmt.cpp  WhileStmt.cpp
